--- a/composer.json
+++ b/composer.json
@@ -198,6 +198,7 @@
         "vbtc.exchange",
         "vbtc.vn",
         "VirWoX",
+        "Wadax",
         "WEX",
         "wex.nz",
         "xBTCe",
